--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "test:unit": "echo \"Unit tests passed\" && exit 0",
     "test:integration": "echo \"Integration tests passed\" && exit 0",
     "test:e2e": "echo \"E2E tests passed\" && exit 0",
-    "lint": "eslint . --ext .js",
-    "lint:fix": "eslint . --ext .js --fix",
+    "lint": "npx eslint . --ext .js",
+    "lint:fix": "npx eslint . --ext .js --fix",
     "format": "npx prettier --write \"**/*.{js,json,md}\"",
     "format:check": "npx prettier --check \"**/*.{js,json,md}\"",
     "build": "echo \"Build successful\" && exit 0",
     "prepare": "husky install",
-    "pre-commit": "lint-staged && npm run lint && npm test && npm run build"
+    "pre-commit": "lint-staged && npm run lint && npm test && npm run build",
+    "start:tasks": "node services/tasks-service/src/server.js",
+    "start:users": "node services/users-service/src/server.js",
+    "dev:tasks": "node services/tasks-service/src/server.js",
+    "dev:users": "node services/users-service/src/server.js"
   },
   "keywords": [
     "nodejs",
