--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
+# Database setup (local only)
+DATABASE_SETUP.md
+
+# Environment variables
+.env
+.env.local
+
