--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "jest": "^30.2.0",
     "@stryker-mutator/core": "^8.0.0",
     "@stryker-mutator/jest-runner": "^8.0.0",
+    "@commitlint/cli": "^19.0.0",
+    "@commitlint/config-conventional": "^19.0.0",
     "husky": "^9.0.0",
     "lint-staged": "^15.0.0",
     "eslint": "^8.57.0",
