fix: add package-lock.json and fix CI workflows

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Зависимости
 node_modules/
-package-lock.json
+# package-lock.json - should be committed for reproducible builds
 
 # Логи
 npm-debug.log*
