--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
+
       - name: Install dependencies
         run: npm ci
 
@@ -44,6 +49,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
+
       - name: Install dependencies
         run: npm ci
 
@@ -59,11 +69,12 @@ jobs:
       - name: Generate coverage report
         run: npm run test:coverage
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
         with:
-          files: ./coverage/lcov.info
-          fail_ci_if_error: false
+          name: coverage-report
+          path: coverage/
+          retention-days: 30
 
   build:
     name: Build Project
@@ -78,6 +89,11 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
         run: npm ci
@@ -101,6 +117,11 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
         run: npm ci
