--- a/.github/workflows/full-ci-cd.yml
+++ b/.github/workflows/full-ci-cd.yml
@@ -21,6 +21,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
+
       - name: Install dependencies
         run: npm ci
 
@@ -51,6 +56,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
+
       - name: Install dependencies
         run: npm ci
 
@@ -70,6 +80,11 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
         run: npm ci
@@ -101,6 +116,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
+
       - name: Install dependencies
         run: npm ci
 
@@ -124,6 +144,11 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
         run: npm ci
