--- a/.github/workflows/full-ci-cd.yml
+++ b/.github/workflows/full-ci-cd.yml
@@ -27,7 +27,8 @@ jobs:
           sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+        continue-on-error: false
 
       - name: Check code formatting
         run: npm run format:check
@@ -62,7 +63,8 @@ jobs:
           sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+        continue-on-error: false
 
       - name: Run ${{ matrix.test-type }} tests
         run: npm run test:${{ matrix.test-type }}
@@ -87,7 +89,8 @@ jobs:
           sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+        continue-on-error: false
 
       - name: Generate coverage report
         run: npm run test:coverage
@@ -122,7 +125,8 @@ jobs:
           sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+        continue-on-error: false
 
       - name: Validate commit messages
         uses: wagoid/commitlint-github-action@v6
@@ -151,7 +155,8 @@ jobs:
           sudo apt-get install -y build-essential python3
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+        continue-on-error: false
 
       - name: Run all tests
         run: npm test
