--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,18 +30,9 @@ jobs:
         run: npm install
         continue-on-error: false
 
-      - name: Auto-fix code formatting with Prettier
-        run: npm run format
-      
-      - name: Check for formatting changes
-        run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "❌ Code formatting issues found. Please run 'npm run format' locally and commit the changes."
-            git diff
-            exit 1
-          else
-            echo "✅ Code is properly formatted"
-          fi
+      - name: Check code formatting with Prettier
+        run: npm run format:check
+        continue-on-error: true
 
       - name: Run ESLint
         run: npm run lint
